fix: Migrate to WhatsApp Cloud API - Fix Geo-Blocking! 🇮🇩✅
CRITICAL FIX: Indonesian Market Support!

Problem:
❌ Twilio Sandbox → Error 63058 (geo-blocked)
❌ Indonesian numbers tidak bisa akses
❌ Demo blocker untuk target market

Solution:
✅ WhatsApp Cloud API (Native Meta)
✅ No geo-blocking
✅ Full Indonesian support
✅ Lower latency

What's New:
1. whatsapp_bot_cloud.py - Cloud API version
2. WHATSAPP_CLOUD_API_SETUP.md - Complete guide
3. .env.example - Updated with Cloud API config

Technical Changes:

Migration: Twilio → WhatsApp Cloud API
• Webhook: /whatsapp → /webhook (GET/POST)
• Verification: TwiML → Token-based
• Media: MediaUrl0 → Image ID → URL
• Response: TwiML → JSON Graph API

Code Reuse (100%!):
✅ ABCDEAnalyzer - Same logic!
✅ MedGemmaClient - Same logic!
✅ Message formatting - Same!
✅ Blank detection - Same!

Setup Steps (10 min):
1. Meta Developer account
2. Create WhatsApp app
3. Get access token + phone ID
4. Configure webhook
5. python whatsapp_bot_cloud.py
6. Test dengan nomor Indonesia! ✅

Benefits:
✅ Native Meta integration
✅ No regional restrictions
✅ Better for Indonesian market
✅ Production-ready
✅ Lower latency

Comparison:
Twilio: ❌ Geo-blocked
Cloud API: ✅ Full access

User Flow (Unchanged!):
1. User kirim foto via WA
2. Webhook → Flask
3. Analyze (existing logic!)
4. Reply via Graph API
5. User terima hasil! ✅

Demo Ready:
'Geo-blocking solved!
Indonesian users = full access!
Cloud API = production-grade!'

CRITICAL FIX FOR MARKET ACCESSIBILITY! 🎯

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,16 @@ DEBUG_MODE=False
 MAX_UPLOAD_SIZE_MB=10
 SUPPORTED_FORMATS=jpg,jpeg,png
 
+# Twilio WhatsApp Bot (Alternative - has geo-blocking issues)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
+
+# WhatsApp Cloud API (Recommended for Indonesian market)
+# Get from: https://developers.facebook.com/apps
+WHATSAPP_ACCESS_TOKEN=your_meta_access_token_here
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id_here
+WHATSAPP_VERIFY_TOKEN=dermacheck_secure_token_2026
+
 # Ngrok (for Kaggle deployment)
 NGROK_AUTH_TOKEN=your_ngrok_token_here
