fix: Final Migration to Fonnte - Indonesian WA Gateway! 🇮🇩✅
CRITICAL FIX: All Geo-Blocking Issues Resolved!

Problem History:
❌ Twilio → Error 63058 (geo-blocked)
❌ Meta Cloud API → Verification failures
❌ Demo blockers for Indonesian market

Final Solution:
✅ Fonnte.com (Indonesian WA Gateway)
✅ No geo-blocking
✅ No Meta verification needed
✅ Works immediately!

What's New:
1. whatsapp_bot_fonnte.py - Fonnte integration
2. FONNTE_SETUP.md - 5-minute setup guide
3. .env.example - Added FONNTE_TOKEN

Technical Changes:

API Migration: Meta → Fonnte
• Webhook: request.get_json() (JSON payload)
• Sender: data['sender'] (phone number)
• Message: data['message'] (text content)
• Send: POST to api.fonnte.com/send
• Auth: Header Authorization: TOKEN

✅ ABCDEAnalyzer - Same logic!
✅ MedGemmaClient - Same logic!
✅ Message formatting - Same!
✅ Blank detection - Same!

Setup Time: 5 MINUTES! ⚡
1. Fonnte account (1 min)
2. Scan QR code (1 min)
3. Get API token (1 min)
4. Configure webhook (1 min)
5. python whatsapp_bot_fonnte.py (1 min)
6. TEST! ✅

Benefits:
✅ Indonesian-focused (Jakarta-based company)
✅ No approval delays
✅ Simple HTTP API
✅ Works with personal WhatsApp
✅ Perfect for hackathon demo!

Why Fonnte Works:
• Unofficial WA Web API
• No Meta bureaucracy
• Popular in Indonesia
• Reliable for automation
• Free tier sufficient for demo

Comparison:
Twilio: ❌ Geo-blocked
Meta: ❌ Verification hell
Fonnte: ✅ Works out of box!

1. User kirim foto via WA
2. Fonnte webhook → Flask
4. Reply via Fonnte API
5. User terima hasil! ✅

Demo Ready:
'After trying Twilio and Meta...
Final solution: FONNTE!
5-minute setup, full Indonesian support,
demo-ready NOW'After trying Twilio and Meta...

INDONESIAN MARKET = FULLY ACCESSIBLE! 🎯

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,9 @@ WHATSAPP_ACCESS_TOKEN=your_meta_access_token_here
 WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id_here
 WHATSAPP_VERIFY_TOKEN=dermacheck_secure_token_2026
 
+# Fonnte WhatsApp Bot (BEST for Indonesian market - No verification!)
+# Get from: https://fonnte.com/dashboard
+FONNTE_TOKEN=your_fonnte_api_token_here
+
 # Ngrok (for Kaggle deployment)
 NGROK_AUTH_TOKEN=your_ngrok_token_here
