chore: Add Evolution API config to .env.example

--- a/.env.example
+++ b/.env.example
@@ -29,5 +29,10 @@ WHATSAPP_VERIFY_TOKEN=dermacheck_secure_token_2026
 # Get from: https://fonnte.com/dashboard
 FONNTE_TOKEN=your_fonnte_api_token_here
 
+# Evolution API Configuration (Self-Hosted WhatsApp Gateway)
+EVOLUTION_API_URL=http://localhost:8080
+EVOLUTION_API_KEY=dermacheck_ai_secret_key_2026
+EVOLUTION_INSTANCE_NAME=dermacheck
+
 # Ngrok (for Kaggle deployment)
 NGROK_AUTH_TOKEN=your_ngrok_token_here
