--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       # Server Configuration
       - SERVER_URL=http://localhost:8080
       - SERVER_PORT=8080
-      
+
       # Authentication
       - AUTHENTICATION_API_KEY=12345
-      
+
       # Database (Using PostgreSQL)
       - DATABASE_ENABLED=true
       - DATABASE_PROVIDER=postgresql
@@ -25,30 +25,35 @@ services:
       - DATABASE_SAVE_MESSAGE_UPDATE=true
       - DATABASE_SAVE_DATA_CONTACTS=true
       - DATABASE_SAVE_DATA_CHATS=true
-      
+
+      # Cache Configuration (DISABLE REDIS!)
+      - CACHE_REDIS_ENABLED=false
+      - CACHE_REDIS_URI=
+      - CACHE_LOCAL_ENABLED=false
+
       # WhatsApp Configuration
       - QRCODE_LIMIT=30
       - QRCODE_COLOR=#198754
-      
+
       # Webhook Configuration
       - WEBHOOK_GLOBAL_ENABLED=true
       - WEBHOOK_GLOBAL_URL=http://host.docker.internal:5000/webhook
       - WEBHOOK_GLOBAL_WEBHOOK_BY_EVENTS=false
-      
+
       # Logs
       - LOG_LEVEL=ERROR
       - LOG_COLOR=true
-      
+
       # Instance Settings
       - DEL_INSTANCE=false
-      
+
     volumes:
       - evolution_instances:/evolution/instances
       - evolution_store:/evolution/store
-    
+
     depends_on:
       - postgres
-    
+
     networks:
       - evolution_network
 
